tests/ui/parse/top_level_expr.rx
//@ spec: RXS-0011
1 + 2; //~ ERROR RX0008
fn f() {}
